tests/baselines/reference/typeCheckingInsideFunctionExpressionInArray.errors.txt
==== tests/cases/compiler/typeCheckingInsideFunctionExpressionInArray.ts (4 errors) ====
    var functions = [function () {
      var k: string = 10;
          ~
!!! error TS2323: Type 'number' is not assignable to type 'string'.
        k = new Object();
        ~
!!! error TS2323: Type 'Object' is not assignable to type 'string'.
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
        derp();
        ~~~~
!!! error TS2304: Cannot find name 'derp'.
    }];
    